--- a/Structures/.gitignore
+++ b/Structures/.gitignore
@@ -1,4 +1,4 @@
-Structures\ReportUsers.dot
-Structures\ReportUsers.png
-Structures\ReportScoreBoard.dot
-Structures\ReportScoreBoard.png
+ReportUsers.dot
+ReportUsers.png
+ReportScoreBoard.dot
+ReportScoreBoard.png
