implement graphiz in snake class

--- a/Structures/.gitignore
+++ b/Structures/.gitignore
@@ -1,6 +1,8 @@
-ReportUsers.dot
-ReportUsers.png
 ReportScoreBoard.dot
 ReportScoreBoard.png
+ReportUsers.dot
+ReportUsers.png
 ReportScore.dot
 ReportScore.png
+ReportSnake.dot
+ReportSnake.png
